--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -3,11 +3,15 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">“TÔI LÀ
+    <h1 class="MainPageText">“TÔI LÀ
         </br>
 ĂN ĂN
         </br>
 
 ĐÂY!!! “
 </h1>
+
+
+<a asp-action="AboutUs" class="MainButton">Về Chúng Tôi</a>
+  
 </div>
