--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -6,12 +6,11 @@
     <title>@ViewData["Title"] An An</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
-    <link rel="stylesheet" href="~/Shared/stylesheets/style.css">
 
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light navDark">
             <div class="container">
                 <a class="navbar-brand" asp-area=""  asp-controller="Home" asp-action="Index" id = "Logo1"><img id="logo" src="~/Group.png" alt="An An" /></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
@@ -21,29 +20,29 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse ">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Trang chủ</a>
+                            <a class="navDarkText" asp-area="" asp-controller="Home" asp-action="Index">Trang chủ</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="AboutUs">Về chúng tôi</a>
+                            <a class="navDarkText" asp-area="" asp-controller="Home" asp-action="AboutUs">Về chúng tôi</a>
                         </li>
                            <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Menu">Thực đơn</a>
+                            <a class="navDarkText" asp-area="" asp-controller="Home" asp-action="Menu">Thực đơn</a>
                         </li>
                            <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="News">Sự Kiện</a>
+                            <a class="navDarkText" asp-area="" asp-controller="Home" asp-action="News">Sự Kiện</a>
                         </li>
                              <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Reservation">Đặt bàn</a>
+                            <a class="navDarkText" asp-area="" asp-controller="Home" asp-action="Reservation">Đặt bàn</a>
                         </li>
                              <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Contact">Liên hệ</a>
+                            <a class="navDarkText" asp-area="" asp-controller="Home" asp-action="Contact">Liên hệ</a>
                         </li>
                     </ul>
                 </div>
             </div>
         </nav>
     </header>
-    <div class="container">
+    <div class="container fill">
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
@@ -51,7 +50,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2021 - TestWebsite - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; An An <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
