added some pages, added logo

--- a/Views/Home/Menu.cshtml
+++ b/Views/Home/Menu.cshtml
@@ -1,6 +1,50 @@
-@{
-    ViewData["Title"] = "Menu";
-}
-<h1>@ViewData["Title"]</h1>
 
-<p>Menu.</p>
+
+<div class="text-left">
+        <h1 class="AboutUsHeader"> TINH HOA ẨM THỰC </h1>
+        <div class="rowMenu">
+             <div class="column" >
+                 <div class ="menuItem">
+                    <h2>Bánh tráng nướng</h2>
+                    <p>Vỏ bánh tráng, trứng cút, xúc xích,...</p>
+                 </div>     
+                <div class ="menuItem">
+                    <h2>Bánh trứng cút nướng</h2>
+                    <p>Trứng cút, rau thơm, xoài, bơ, sốt me,...</p>
+                 </div>     
+                <div class ="menuItem">
+                    <h2>Ngô xào mỡ hành</h2>
+                    <p>Ngô, mỡ hành, bơ, hành khô</p>
+                 </div>     
+                <div class ="menuItem">
+                    <h2>Xiên "bẩn"</h2>
+                    <p>Nem chua, xiên mực, xiên sò, rau củ</p>
+                 </div>     
+                <div class ="menuItem">
+                    <h2> Bánh giò </h2>
+                    <p>Bánh giò, chả lụa, chả cốm, xúc xích,...</p>
+                 </div>     
+            </div>
+             <div class="column" >
+                <div class ="menuItem">
+                    <h2>Bánh tráng nướng</h2>
+                    <p>Vỏ bánh tráng, trứng cút, xúc xích,...</p>
+                 </div>     
+                <div class ="menuItem">
+                    <h2>Bánh trứng cút nướng</h2>
+                    <p>Trứng cút, rau thơm, xoài, bơ, sốt me,...</p>
+                 </div>     
+                <div class ="menuItem">
+                    <h2>Ngô xào mỡ hành</h2>
+                    <p>Ngô, mỡ hành, bơ, hành khô</p>
+                 </div>     
+                <div class ="menuItem">
+                    <h2>Xiên "bẩn"</h2>
+                    <p>Nem chua, xiên mực, xiên sò, rau củ</p>
+                 </div>     
+                <div class ="menuItem">
+                    <h2> Bánh giò </h2>
+                    <p>Bánh giò, chả lụa, chả cốm, xúc xích,...</p>
+                 </div>     
+        </div>
+</div>
