--- a/Views/Home/AboutUs.cshtml
+++ b/Views/Home/AboutUs.cshtml
@@ -1,12 +1,13 @@
 
 <h1>@ViewData["Title"]</h1>
-
 <div class="text-center">
-    <h1 class="AboutUsText">CHÚNG MÌNH LÀ AI?
-</h1>
+    <div class = "AboutUsBody">
+        <h1 class="AboutUsHeader">CHÚNG MÌNH </br> LÀ AI?</h1>
+         <p class="AboutUsText"> 
+               Với tình yêu ẩm thực đường phố, chúng mình khao khát đưa tới mọi người sự thân thiện và cảm nhận đối với đồ ăn bình dị, đồng thời duy trì văn hoá ẩm thực của người Viêt Nam, kết hợp với sự sáng tạo và sôi động trong nhịp sống hiện tại. 
+        </p>
 
-    <p>
-        Với tình yêu ẩm thực đường phố, chúng mình khao khát đưa tới mọi người sự thân thiện và cảm nhận đối với đồ ăn bình dị, đồng thời duy trì văn hoá ẩm thực của người Viêt Nam, kết hợp với sự sáng tạo và sôi động trong nhịp sống hiện tại. 
-    </p>
-  
+    </div>
+
+        <img id="AboutUsImg" src="~/Images/AboutUs_IMG.jpg" />
 </div>
