--- a/Views/Home/Gallery.cshtml
+++ b/Views/Home/Gallery.cshtml
@@ -3,4 +3,13 @@
 }
 <h1>@ViewData["Title"]</h1>
 
-<p>Gallery</p>
+<div class="row">
+  <div class="column" >
+    <h2>Column 1</h2>
+    <p>Some text..</p>
+  </div>
+  <div class="column" >
+    <h2>Column 2</h2>
+    <p>Some text..</p>
+  </div>
+</div>
