Menu now follows page, changed some html structures

--- a/Views/Home/AboutUs.cshtml
+++ b/Views/Home/AboutUs.cshtml
@@ -1,5 +1,6 @@
 
-<h1>@ViewData["Title"]</h1>
+<div class="subPage">
+
 <div class="text-center">
     <div class = "AboutUsBody">
         <h1 class="AboutUsHeader">CHÚNG MÌNH </br> LÀ AI?</h1>
@@ -10,4 +11,22 @@
     </div>
 
         <img id="AboutUsImg" src="~/Images/AboutUs_IMG.jpg" />
+</div>
+
+
+<div class="newsBackground">
+<div class="text-left">
+        <h1 class="MainPageText"> SỰ KIỆN </h1>
+        <div class="rowMenu">
+             <div class="column" >  
+
+            </div>
+             <div class="column" >
+
+            </div>     
+        </div>
+</div>
+
+</div>
+
 </div>
