--- a/Views/Home/Menu.cshtml
+++ b/Views/Home/Menu.cshtml
@@ -1,50 +1,90 @@
 
+<div class="subPage">
 
 <div class="text-left">
         <h1 class="AboutUsHeader"> TINH HOA ẨM THỰC </h1>
         <div class="rowMenu">
              <div class="column" >
                  <div class ="menuItem">
-                    <h2>Bánh tráng nướng</h2>
+                    <h2>Bánh tráng nướng      
+                         <div class ="itemPrice">
+                        20.000đ
+                    </div></h2>
                     <p>Vỏ bánh tráng, trứng cút, xúc xích,...</p>
                  </div>     
                 <div class ="menuItem">
-                    <h2>Bánh trứng cút nướng</h2>
+                    <h2>Bánh trứng cút nướng
+                         <div class ="itemPrice">40.000
+                    </div>
+                    </h2>
                     <p>Trứng cút, rau thơm, xoài, bơ, sốt me,...</p>
                  </div>     
                 <div class ="menuItem">
-                    <h2>Ngô xào mỡ hành</h2>
+                    <h2>Ngô xào mỡ hành
+                          <div class ="itemPrice">
+                        30.000đ
+                    </div>
+                    </h2>                 
                     <p>Ngô, mỡ hành, bơ, hành khô</p>
                  </div>     
                 <div class ="menuItem">
-                    <h2>Xiên "bẩn"</h2>
+                    <h2>Xiên "bẩn"
+                        <div class ="itemPrice">
+                       50.000đ
+                        </div>
+                    </h2>
                     <p>Nem chua, xiên mực, xiên sò, rau củ</p>
                  </div>     
                 <div class ="menuItem">
-                    <h2> Bánh giò </h2>
+                    <h2> Bánh giò 
+                        <div class ="itemPrice">
+                        20.000đ
+                        </div>
+                    </h2>
                     <p>Bánh giò, chả lụa, chả cốm, xúc xích,...</p>
                  </div>     
             </div>
              <div class="column" >
                 <div class ="menuItem">
-                    <h2>Bánh tráng nướng</h2>
-                    <p>Vỏ bánh tráng, trứng cút, xúc xích,...</p>
+                    <h2>Xôi lạc bánh khúc
+                        <div class ="itemPrice">
+                        10.000đ
+                        </div>
+                    </h2>
+                    <p>Xôi lạc, bánh khúc, giò lụa,...</p>
                  </div>     
                 <div class ="menuItem">
-                    <h2>Bánh trứng cút nướng</h2>
-                    <p>Trứng cút, rau thơm, xoài, bơ, sốt me,...</p>
+                    <h2>Bánh tráng trộn
+                        <div class ="itemPrice">
+                        20.000đ
+                        </div>
+                    </h2>
+                    <p>Xoài, giấm, trứng cút, hành khô,...</p>
                  </div>     
                 <div class ="menuItem">
-                    <h2>Ngô xào mỡ hành</h2>
-                    <p>Ngô, mỡ hành, bơ, hành khô</p>
+                    <h2>Bánh tráng cuộn
+                        <div class ="itemPrice">
+                        20.000đ
+                        </div>
+                    </h2>
+                    <p>Muối ớt tây ninh, bánh tráng, trứng cút,...</p>
                  </div>     
                 <div class ="menuItem">
-                    <h2>Xiên "bẩn"</h2>
-                    <p>Nem chua, xiên mực, xiên sò, rau củ</p>
+                    <h2>Xoài dầm
+                        <div class ="itemPrice">
+                        10.000đ
+                        </div>
+                    </h2>
+                    <p>Xoài chua, muối ớt,...</p>
                  </div>     
                 <div class ="menuItem">
-                    <h2> Bánh giò </h2>
-                    <p>Bánh giò, chả lụa, chả cốm, xúc xích,...</p>
+                    <h2> Cốc dầm
+                        <div class ="itemPrice">
+                        10.000đ
+                        </div>
+                    </h2>
+                    <p>Cốc dầm, muối ớt, nước,... </p>
                  </div>     
         </div>
+</div>
 </div>
