--- a/Views/Home/News.cshtml
+++ b/Views/Home/News.cshtml
@@ -1,6 +1,14 @@
-@{
-    ViewData["Title"] = "News";
-}
-<h1>@ViewData["Title"]</h1>
+<div class="subPage newsBackground">
+<div class="text-left">
+        <h1 class="MainPageText"> SỰ KIỆN </h1>
+        <div class="rowMenu">
+             <div class="column" >  
 
-<p>News</p>
+            </div>
+             <div class="column" >
+
+            </div>     
+        </div>
+</div>
+
+</div>
