--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,17 +1,18 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
+<div class="subPage">
 
-<div class="text-center">
+    <div class="text-center">
     <h1 class="MainPageText">“TÔI LÀ
         </br>
-ĂN ĂN
+        ĂN ĂN
         </br>
 
-ĐÂY!!! “
-</h1>
+        ĐÂY!!! “
+        </h1>
 
-
-<a asp-action="AboutUs" class="MainButton">Về Chúng Tôi</a>
+    <a asp-action="AboutUs" class="MainButton">Về Chúng Tôi</a>
   
+    </div>
 </div>
