--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -21,7 +21,6 @@ body {
 }
 .fill{
   min-height: 90vh;
-  padding-top: 3%;
 }
 /* Provide sufficient contrast against white background */
 a {
@@ -140,6 +139,8 @@ color: #FFFFFF;
 
 #TopNavBar{
   height: 10vh;
+  position: fixed;
+  width: 100%;
 }
 #NavBar{
   height: 100%;
@@ -151,6 +152,7 @@ color: #FFFFFF;
 }
 .container{
   max-width: 100% !important;
+  padding: 0 !important;
 }
 .AboutUsBody{
   width: 40%;
@@ -180,11 +182,24 @@ color: #FFFFFF;
 
 .rowMenu{ 
   display: flex;
-  width: 80%;
-  padding-left: 25%;
+  width: 90%;
+  padding-left: 10%;
 
 }
 
 .text-left{
   text-align: left;
+}
+.itemPrice{
+  text-align: right;
+  display: inline;
+  float: right;
+}
+.subPage{
+  height: 90vh; 
+  padding-top: 10%;
+}
+
+.newsBackground{
+  background: #19234B;
 }
