added  many pages

--- a/Views/Home/AboutUs.cshtml
+++ b/Views/Home/AboutUs.cshtml
@@ -14,9 +14,62 @@
 </div>
 
 
-<div class="newsBackground">
+
+</div>
+
+
+
+<div class="AboutUsCulture">
+<div class="text-left" >
+        <div class="RowAboutUs">
+             <div class="column" >  
+                         <h1 class="CultureHeader"> VĂN HÓA <br>
+                         ĐƯỜNG PHỐ</h1>
+                <div class="CultureText">
+                    He takes inspiration from the country’s vibrant food culture and uses fresh ingredients often sourced from local markets while incorporating French culinary techniques. The result is a focused menu of deeply flavorsome dishes.
+                    
+                <div class="carousel-controlers">
+                      <button  class="carousel-blocks" data-target="#myCarousel" data-slide-to="0" class="active"> 1 </button >
+                      <button  class="carousel-blocks"  data-target="#myCarousel" data-slide-to="1"> 2 </button >
+                      <button  class="carousel-blocks"  data-target="#myCarousel" data-slide-to="2">3 </button >
+                    </div>
+                </div>
+
+
+             </div>
+             <div class="column" style ="padding: 0">
+                <div class="container">
+
+                 <div id="myCarousel" class="carousel slide" data-interval="false"  data-ride="carousel">
+
+
+                <!-- Wrapper for slides -->
+                  <div class="carousel-inner">
+                       <div class="item active">
+                      <img src="~/Images/Culture1.jpg" style="width:100%; height:100vh">
+                  </div>
+
+                    <div class="item">
+                    <img src="~/Images/Culture2.jpg" style="width:100%;height:100vh">
+                 </div>
+    
+                 <div class="item">
+                  <img src="~/Images/Culture3.jpg"  style="width:100%; height:100vh">
+                  </div>
+        </div>
+
+  </div>
+</div>
+
+
+
+            </div>     
+        </div>
+</div>
+</div>
+<div class="AboutUsGallery">
 <div class="text-left">
-        <h1 class="MainPageText"> SỰ KIỆN </h1>
+        <h1 class="MainPageText"> Gallery </h1>
         <div class="rowMenu">
              <div class="column" >  
 
@@ -25,8 +78,48 @@
 
             </div>     
         </div>
-</div>
+</div> 
+</div> 
+<div class="AboutUsRecommendation">
+<div class="text-left" >
+        <div class="RowAboutUs">
+             <div class="column" >  
+                         <h1 class="RecHeader"> Giờ ăn đến rồi!! <br>
+                         Giờ ăn đến rồi!!</h1>
+                <div class="RecText">
+                <div class="carousel-controlers">
+                      <button  class="carousel-blocks" data-target="#myCarouse2" data-slide-to="0" class="active" style ="padding:0 5% 0 5%"> Thức uống </button >
+                      <button  class="carousel-blocks"  data-target="#myCarouse2" data-slide-to="1"style ="padding:0 5% 0 5%"> Đồ ăn </button >
+                      <button  class="carousel-blocks"  data-target="#myCarouse2" data-slide-to="2"style ="padding:0 5% 0 5%"> Combo </button >
+                    </div>
+                </div>
+                <div class="RecButton"> KHÁM PHÁ</div>
 
-</div>
+
+             </div>
+             <div class="column" style ="padding: 0">
+                <div class="container">
+
+                 <div id="myCarouse2" class="carousel slide" data-interval="false"  data-ride="carousel">
+
+
+                <!-- Wrapper for slides -->
+                  <div class="carousel-inner">
+                       <div class="item active">
+                      <img src="~/Images/Rec1.jpg" style="width:100%; height:100vh">
+                  </div>
+
+                    <div class="item">
+                    <img src="~/Images/Rec2.jpg" style="width:100%;height:100vh ">
+                 </div>
+    
+                 <div class="item">
+                  <img src="~/Images/Rec3.jpg"  style="width:100%; height:100vh">
+                  </div>
+              </div>
+
+
+
+  </div>
 
 </div>
