--- a/Views/Home/News.cshtml
+++ b/Views/Home/News.cshtml
@@ -1,14 +1,16 @@
 <div class="subPage newsBackground">
 <div class="text-left">
-        <h1 class="MainPageText"> SỰ KIỆN </h1>
-        <div class="rowMenu">
+    <h1 class="newsText"> SỰ KIỆN </h1>
+        <div class="rowNews">
              <div class="column" >  
-
+                <div class="newsButton"> ĐI ĐÂU CHƠI CUỐI TUẦN </div>
             </div>
              <div class="column" >
-
+                <div class="newsButton"> ĐI ĐÂU CHƠI CUỐI TUẦN </div>
             </div>     
         </div>
+    </div>
+    
 </div>
 
 </div>
