--- a/Views/Home/Reservation.cshtml
+++ b/Views/Home/Reservation.cshtml
@@ -1,6 +1,11 @@
-@{
-    ViewData["Title"] = "Reservation";
-}
-<h1>@ViewData["Title"]</h1>
+<div class="subPage">
+    <div class="text-center">
+    <h1 class="MainPageText"> ĐẶT BÀN THÔI
+        </h1>
+        <input type="text" id="Name" class="ReservationInput">
+          <input type="date" id="dateTime" class="ReservationInput">
+        <input type="text" id="phone" class="ReservationInput">
+        <a  class="ReserveButton">Đặt bàn ngay</a>
 
-<p>reservation</p>
+    </div>
+</div>
