Finished all pages. still need responsive and maybe transitions

--- a/Views/Home/AboutUs.cshtml
+++ b/Views/Home/AboutUs.cshtml
@@ -69,14 +69,19 @@
 </div>
 <div class="AboutUsGallery">
 <div class="text-left">
-        <h1 class="MainPageText"> Gallery </h1>
         <div class="rowMenu">
              <div class="column" >  
+                 <img id ="galleryImg" src="~/Images/Gallery.jpg" alt="gallery">
 
             </div>
              <div class="column" >
+                <h1 class="RecHeader"> Gallery </h1>
+                <div class="galleryText">
+                    He takes inspiration from the country’s vibrant food culture and uses fresh ingredients often sourced from local markets while incorporating French culinary techniques. The result is a focused menu of deeply flavorsome dishes.
 
-            </div>     
+                 </div>     
+                        <div class="galleryButton"> KHÁM PHÁ</div>
+            </div>
         </div>
 </div> 
 </div> 
