--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,5 +1,4 @@
-﻿
-<div class="subPage">
+﻿<div class="subPage" style="background-image: url( ../Images/MainPage.jpg)">
     <div class="text-center">
     <h1 class="MainPageText">“TÔI LÀ
         </br>
