--- a/Views/Home/News.cshtml
+++ b/Views/Home/News.cshtml
@@ -2,10 +2,10 @@
 <div class="text-left">
     <h1 class="newsText"> SỰ KIỆN </h1>
         <div class="rowNews">
-             <div class="column" >  
+             <div class="columnNews" >  
                 <div class="newsButton"> ĐI ĐÂU CHƠI CUỐI TUẦN </div>
             </div>
-             <div class="column" >
+             <div class="columnNews" >
                 <div class="newsButton"> ĐI ĐÂU CHƠI CUỐI TUẦN </div>
             </div>     
         </div>
