--- a/Views/Home/Reservation.cshtml
+++ b/Views/Home/Reservation.cshtml
@@ -2,10 +2,49 @@
     <div class="text-center">
     <h1 class="MainPageText"> ĐẶT BÀN THÔI
         </h1>
-        <input type="text" id="Name" class="ReservationInput">
+        <input type="text" id="Name" placeholder="Số người"  class="ReservationInput">
           <input type="date" id="dateTime" class="ReservationInput">
-        <input type="text" id="phone" class="ReservationInput">
+        <input type="text" id="phone" placeholder="Số điện thoại" class="ReservationInput">
         <a  class="ReserveButton">Đặt bàn ngay</a>
 
     </div>
+
+    <div class="row" style ="padding-left: 18%;">
+        <div class="col4" style ="padding-right: 25%;">
+                <a class="navbar-brand" asp-area=""  asp-controller="Home" asp-action="Index" id = "Logo1"><img id="AnAnLogo" src="~/Images/Group2.png" alt="An An" /></a>
+        </div>
+            
+        <div class="col4"> 
+                    <h3> Follow us</h3>
+        <p>
+            Facebook<br>
+            Instagram<br>
+            Linkedin<br>
+        </p>
+        </div>
+
+        <div class="col4"> 
+              <h3> Links</h3>
+            <p>Về chúng tôi<br>
+                Thực đơn<br>
+                Đặt bàn<br>
+                Sự kiện<br>
+            </p> 
+        </div>
+      
+        <div class="col4">
+                    <h3>  Get in touch</h3>
+        <p>
+            186 Vệ Hồ, quận Tây Hồ, Hà Nội. <br>
+            085-1306949 <br>
+            project2@gmail.com <br>
+        </p>
+             </div>
+
+    </div>
+
+    <footer class="reserveFooter">
+        <p>Copyright 2021 Ănăn. All Rights Reserved.</p>
+    </footer>
+
 </div>
