--- a/Views/Home/AboutUs.cshtml
+++ b/Views/Home/AboutUs.cshtml
@@ -1,5 +1,6 @@
 
-<div class="subPage">
+<div class="subPage" style="min-width: 1920px;
+    min-height: 1080px;">
 
 <div class="text-center">
     <div class = "AboutUsBody">
@@ -46,15 +47,15 @@
                 <!-- Wrapper for slides -->
                   <div class="carousel-inner">
                        <div class="item active">
-                      <img src="~/Images/Culture1.jpg" style="width:100%; height:100vh">
+                      <img src="~/Images/Culture1.jpg" style="width:100%; height:100vh;min-height:1080px">
                   </div>
 
                     <div class="item">
-                    <img src="~/Images/Culture2.jpg" style="width:100%;height:100vh">
+                    <img src="~/Images/Culture2.jpg" style="width:100%;height:100vh;min-height:1080px">
                  </div>
     
                  <div class="item">
-                  <img src="~/Images/Culture3.jpg"  style="width:100%; height:100vh">
+                  <img src="~/Images/Culture3.jpg"  style="width:100%; height:100vh;min-height:1080px">
                   </div>
         </div>
 
@@ -111,15 +112,15 @@
                 <!-- Wrapper for slides -->
                   <div class="carousel-inner">
                        <div class="item active">
-                      <img src="~/Images/Rec1.jpg" style="width:100%; height:100vh">
+                      <img src="~/Images/Rec1.jpg" style="width:100%; height:100vh; min-height:1080px">
                   </div>
 
                     <div class="item">
-                    <img src="~/Images/Rec2.jpg" style="width:100%;height:100vh ">
+                    <img src="~/Images/Rec2.jpg" style="width:100%;height:100vh;min-height:1080px ">
                  </div>
     
                  <div class="item">
-                  <img src="~/Images/Rec3.jpg"  style="width:100%; height:100vh">
+                  <img src="~/Images/Rec3.jpg"  style="width:100%; height:100vh;min-height:1080px">
                   </div>
               </div>
 
