changed about us recommendation

--- a/Views/Home/AboutUs.cshtml
+++ b/Views/Home/AboutUs.cshtml
@@ -99,14 +99,13 @@
                       <button  class="carousel-blocks"  data-target="#myCarouse2" data-slide-to="2"style ="padding:0 5% 0 5%"> Combo </button >
                     </div>
                 </div>
-                <div class="RecButton"> KHÁM PHÁ</div>
 
 
              </div>
              <div class="column" style ="padding: 0">
                 <div class="container">
 
-                 <div id="myCarouse2" class="carousel slide" data-interval="false"  data-ride="carousel">
+                 <div id="myCarouse2" class="carousel slide"  data-ride="carousel">
 
 
                 <!-- Wrapper for slides -->
