--- a/Views/Home/Menu.cshtml
+++ b/Views/Home/Menu.cshtml
@@ -1,37 +1,42 @@
+<div class="AboutUsRecommendation">
+<div class="text-left" >
+        <div class="RowAboutUs">
+             <div class="column" >  
+                         <h1 class="RecHeader"> Giờ ăn đến rồi!! <br>
+                         Giờ ăn đến rồi!!</h1>
+                <div class="RecText">
+                <div class="carousel-controlers">
+                      <button  class="carousel-blocks"  style ="padding:0 5% 0 5%"> Thức uống </button >
+                      <button  class="carousel-blocks"  style ="padding:0 5% 0 5%"> Đồ ăn </button >
+                      <button  class="carousel-blocks"  style ="padding:0 5% 0 5%"> Combo </button >
+                    </div>
+                </div>
 
-<div class="subPage" style="background-color:#E5E5E5; padding-top:5%" >
 
-<div class="text-left">
- 
+             </div>
+             <div class="column" style ="padding: 0">
+                <div class="container">
 
-  <div class="container">
-
-                 <div id="myCarouse3" class="carousel slide" data-interval="false"  data-ride="carousel">
+                 <div id="myCarouse2" class="carousel slide"  data-ride="carousel">
 
 
                 <!-- Wrapper for slides -->
                   <div class="carousel-inner">
                        <div class="item active">
-                      <img src="~/Images/Menu1.jpg" style="width:100%; height:100vh">
+                      <img src="~/Images/Rec1.jpg" style="width:100%; height:100vh; min-height:1080px">
                   </div>
 
                     <div class="item">
-                    <img src="~/Images/Menu2.jpg" style="width:100%;height:100vh ">
+                    <img src="~/Images/Rec2.jpg" style="width:100%;height:100vh;min-height:1080px ">
                  </div>
     
                  <div class="item">
-                  <img src="~/Images/Menu3.png"  style="width:100%; height:100vh">
+                  <img src="~/Images/Rec3.jpg"  style="width:100%; height:100vh;min-height:1080px">
                   </div>
               </div>
 
-                  <!-- Left and right controls -->
-    <a class="left carousel-control" href="#myCarouse3" data-slide="prev">
-      <span class="glyphicon glyphicon-chevron-left"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="right carousel-control" href="#myCarouse3" data-slide="next">
-      <span class="glyphicon glyphicon-chevron-right"></span>
-      <span class="sr-only">Next</span>
-    </a>
-</div>
+
+
+  </div>
+
 </div>
