added 3 pages for menu

--- a/Views/Home/Menu.cshtml
+++ b/Views/Home/Menu.cshtml
@@ -6,9 +6,9 @@
                          Giờ ăn đến rồi!!</h1>
                 <div class="RecText">
                 <div class="carousel-controlers">
-                      <button  class="carousel-blocks"  style ="padding:0 5% 0 5%"> Thức uống </button >
-                      <button  class="carousel-blocks"  style ="padding:0 5% 0 5%"> Đồ ăn </button >
-                      <button  class="carousel-blocks"  style ="padding:0 5% 0 5%"> Combo </button >
+                      <a  class="carousel-blocks" asp-controller="Home" asp-action="DoAn" style ="padding:0 5% 0 5%"> Thức uống </a >
+                      <a  class="carousel-blocks"  asp-controller="Home" asp-action="DoUong" style ="padding:0 5% 0 5%"> Đồ ăn </a >
+                      <a  class="carousel-blocks" asp-controller="Home" asp-action="Combo"  style ="padding:0 5% 0 5%"> Combo </a >
                     </div>
                 </div>
 
