--- a/Views/Home/Menu.cshtml
+++ b/Views/Home/Menu.cshtml
@@ -6,8 +6,8 @@
                          Giờ ăn đến rồi!!</h1>
                 <div class="RecText">
                 <div class="carousel-controlers">
-                      <a  class="carousel-blocks" asp-controller="Home" asp-action="DoAn" style ="padding:0 5% 0 5%"> Thức uống </a >
-                      <a  class="carousel-blocks"  asp-controller="Home" asp-action="DoUong" style ="padding:0 5% 0 5%"> Đồ ăn </a >
+                      <a  class="carousel-blocks" asp-controller="Home" asp-action="DoUong" style ="padding:0 5% 0 5%"> Thức uống </a >
+                      <a  class="carousel-blocks"  asp-controller="Home" asp-action="DoAn" style ="padding:0 5% 0 5%"> Đồ ăn </a >
                       <a  class="carousel-blocks" asp-controller="Home" asp-action="Combo"  style ="padding:0 5% 0 5%"> Combo </a >
                     </div>
                 </div>
