--- a/Views/Home/AboutUs.cshtml
+++ b/Views/Home/AboutUs.cshtml
@@ -1,5 +1,5 @@
 
-<div class="subPage" style="min-width: 1920px;
+<div class="subPage" style="width: 100%;
     min-height: 1080px;">
 
 <div class="text-center">
@@ -72,7 +72,7 @@
 <div class="text-left">
         <div class="rowMenu">
              <div class="column" >  
-                 <img id ="galleryImg" src="~/Images/Gallery.jpg" alt="gallery">
+                 <img id ="galleryImg" src="~/Images/Gallery.jpg" class="img-fluid" alt="gallery">
 
             </div>
              <div class="column" >
@@ -81,7 +81,6 @@
                     He takes inspiration from the country’s vibrant food culture and uses fresh ingredients often sourced from local markets while incorporating French culinary techniques. The result is a focused menu of deeply flavorsome dishes.
 
                  </div>     
-                        <div class="galleryButton"> KHÁM PHÁ</div>
             </div>
         </div>
 </div> 
