--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -17,13 +17,13 @@
     <header id="TopNavBar">
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light navDark" id="NavBar">
             <div class="container" >
-                <a class="navbar-brand" asp-area=""  asp-controller="Home" asp-action="Index" id = "Logo1"><img id="AnAnLogo" src="~/Images/Group.png" alt="An An" /></a>
+                <a class="navbar-brand  align-items-center" asp-area=""  asp-controller="Home" asp-action="Index" id = "Logo1"><img id="AnAnLogo" src="~/Images/Group.png" alt="An An" /></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span> 
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse ">
-                    <ul class="navbar-nav flex-grow-1">
+                    <ul class="navbar-nav ms-auto align-items-center">
                         <li class="nav-item">
                             <a class="navDarkText" asp-area="" asp-controller="Home" asp-action="Index">Trang chủ</a>
                         </li>
