--- a/Views/Home/DoUong.cshtml
+++ b/Views/Home/DoUong.cshtml
@@ -1,3 +1,3 @@
 <div class="subPage" style="padding-top:5%" >
-<img class="MenuImg" src="~/Images/Menu2.jpg" alt="An An" />
+<img class="MenuImg" src="~/Images/DoUong3.png" alt="An An" />
 </div>
