--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,5 +1,5 @@
-﻿<div class="subPage" style="background-image: url( ../Images/MainPage.jpg)">
-    <div class="text-center">
+﻿<div class="home">
+  <div class="text-center">
     <h1 class="MainPageText">“TÔI LÀ
         </br>
         ĂN ĂN
@@ -9,6 +9,6 @@
         </h1>
 
     <a asp-action="AboutUs" class="MainButton">Về Chúng Tôi</a>
-  
     </div>
+
 </div>
