--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -8,11 +8,11 @@ a.navbar-brand {
 }
 #Logo1 {
   width:50%;
-  padding-left: 10%;
+  padding-left: 5%;
 
 }
 #AnAnLogo{
-  max-height: 50px;
+  max-height: 30px;
   margin-right: 45%;
 }
 html {
@@ -209,7 +209,7 @@ color: #FFFFFF;
 .AboutUsCulture {
   height: 100vh;
   margin-top: 12%;
-  min-width: 1920px;
+  min-width: 100%;
     min-height: 1080px;
   background: #19234B;
 }
@@ -256,13 +256,13 @@ color: #FFFFFF;
 .AboutUsGallery{
   height: 100vh;
   background: #FFFFFF;
-  min-width: 1920px;
-    min-height: 1080px;
+  min-width: 100%;
+  padding-bottom: 80px;
 }
 .AboutUsRecommendation{
     height: 100vh;
     background: #19234B;
-    min-width: 1920px;
+    min-width: 100%;
     min-height: 1080px;
   }
 
@@ -446,8 +446,8 @@ color: #FFFFFF;
   line-height: 2.5rem;
   width: 90%;
   text-align: center;
-  padding-left: 15%;
   padding-top: 5%;
+  padding-left: 15%;
 }
 
 .galleryButton {
@@ -530,4 +530,20 @@ footer {
 .MenuImg{
   height : 100%;
   width: 100%;
+}
+
+.Page{
+  background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(../Images/MainPage.jpg);
+  background-size: cover;
+}
+h1.MainPageText{
+  padding-top: 80px;
+  text-align: center;
+}
+.home{
+  background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(../Images/MainPage.jpg);
+  background-size: cover;
+  margin-top: 80px;
+  padding-top: 120px;
+  padding-bottom: 180px;
 }
